tests/ui/parser/recover/recover-field-extra-angle-brackets-in-struct-with-a-field.rs
struct TypedArenaChunk {
    next: Option<String>>
    //~^ ERROR unmatched angle bracket
}

fn main() {}

// ferrocene-annotations: fls_9ucqbbd0s2yo
// Struct Types
